# PeakRDL-etana

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build_yosys.yml  setup_yosys.yml  test_checkin.yml  test_environment.yml  test_etana_icarus.yml  test_etana_verilator.yml  test_regblock_verilator.yml  test_regblock_vhdl_ghdl.yml  test_regblock_vhdl_nvc.yml
cocotb/: regblock.mak
cocotb/interfaces/: S25FL.py  apb_driver.py  clkrst.py  spansion.py
cocotb/rtlflo/: cocotb_helper.mak  tb_runner.py  vivado_helper.py  vivado_runner.py
cocotb/test_dmi/: dmi.rdl  dmi.xml  dut.sv  test_dut.py
cocotb/test_external/: dut.sv  regblock.rdl  simple.rdl  test_dut.py
cocotb/test_field_types/: dut.sv  test_dut.py
cocotb/test_io_base/: Makefile  dut.sv  io_base.rdl  test_dut.py
cocotb/test_onread_onwrite/: dut.sv  test_dut.py
cocotb/test_parity/: Makefile  dut.sv  test_dut.py
cocotb/test_read_fanin/: Makefile  dut.sv  test_dut.py
cursor_help/: COCOTB_MIGRATION_GUIDE.md  UPSTREAM_SYNC_STATUS.md
docs/: conf.py  configuring.rst  hwif.rst  index.rst  licensing.rst  testing.rst
docs/cpuif/: ahb.rst  ahblite.rst  apb.rst  avalon.rst  axi4lite.rst  passthrough.rst  wishbone.rst
docs/rdl_features/: external.rst
docs/udps/: err_support.rst  intro.rst  verilog_reg_only.rst
hdl-src/: etana_udps.rdl  regblock_udps.rdl
scripts/: strip_trailing_whitespace.py
scripts/hwif_wrapper_tool/: generate_wrapper.py
scripts/hwif_wrapper_tool_vhdl/: generate_wrapper_vhdl.py
src/peakrdl_etana/: __about__.py  __init__.py  __peakrdl__.py  addr_decode.py  dereferencer.py  entry_points.py  exporter.py  external_acks.py  forloop_generator.py  hwif_report_generator.py  module_tmpl.sv  package_tmpl.sv  parity.py  scan_design.py  struct_generator.py  template_generator.py  utils.py  validate_design.py
src/peakrdl_regblock/: addr_decode.py  exporter.py  module_tmpl.sv  utils.py
tests/: regblock.mak  requirements.txt  synthesis.ys  tb_base.py  test_all.sh  test_all_synth.sh  tests.mak
tests-cocotb/: tb_base.py  tests.mak
tests-cocotb/interfaces/: axi_driver.py  clkreset.py  passthrough.py
tests-cocotb/test_buffered_swacc_swmod/: test_dut.py
tests-cocotb/test_counter_basics/: regblock.rdl
tests-cocotb/test_counter_saturate/: test_dut.py
tests-cocotb/test_counter_threshold/: test_dut.py
tests-cocotb/test_enum/: test_dut.py
tests-cocotb/test_extended_swacc_swmod/: Makefile  test_dut.py
tests-cocotb/test_external/: external_reg_emulator_simple.py  test_dut.py
tests-cocotb/test_onread_onwrite/: Makefile
tests-cocotb/test_parity/: test_dut.py
tests-cocotb/test_pipelined_cpuif/: test_dut.py
tests-cocotb/test_precedence/: Makefile
tests-cocotb/test_read_fanin/: Makefile
tests-cocotb/test_reset_signals/: test_dut.py
tests-cocotb/test_simple/: test_dut.py
tests-cocotb/test_structural_sw_rw/: test_dut.py
tests-cocotb/test_swacc_swmod/: test_dut.py
tests-cocotb/test_write_buffer/: Makefile  regblock.rdl  test_dut.py
tests-cocotb/test_write_strobes/: Makefile  test_dut.py
tests-debug/interfaces/: clkreset.py  diff_clock.py  spislaveloopback.py
tests-debug/rtl/: fifo_manager.sv
tests-debug/rtlflo/: cocotb_helper.mak
tests-debug/test_dmi/: Makefile
tests-debug/test_external_addrmap/: regblock.rdl
tests-debug/test_external_basic/: Makefile  regblock.rdl  test_dut.py
tests-debug/test_external_mem/: Makefile  sync_manager_apb.sv  test_dut.py
tests-debug/test_parity/: dut.sv  test_dut.py
tests-debug/test_precedence/: dut.sv  test_dut.py
tests-debug/test_read_fanin/: dut.sv  test_dut.py
tests-debug/test_read_fanin_ahb/: Makefile  test_dut.py
tests-regblock/: analyze_remaining.sh  conftest.py
tests-regblock/lib/: sv_line_anchor.py  synth_testcase.py  tb_base_verilator.sv  test_params.py
tests-regblock/test_enum/: tb_template.sv
tests-regblock/test_external/: testcase.py
tests-regblock/test_read_fanin/: tb_template.sv  testcase.py
tests-regblock/test_singlepulse/: tb_template.sv
tests-regblock/test_structural_sw_rw/: tb_template.sv
tests-regblock/test_write_buffer/: testcase.py
tests/hwif_wrapper_tool/: generate_wrapper.py
tests/interfaces/: ahb_wrapper.py  ahblite_wrapper.py  ahbpipeline_wrapper.py  avalon.py  axi_driver.py  axi_wrapper.py  clkreset.py  detect_clk.py  obi.py  passthrough.py  reg_utils.vhd  wishbone_wrapper.py
(+345 files in other folders)
