[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl-etana"
dynamic = ["version"]
requires-python = ">=3.6"
dependencies = [
    "systemrdl-compiler >= 1.27.0, < 2",
    "Jinja2>=2.11",
]

authors = [
    {name="Dave Keeshan"},
]
description = "Compile SystemRDL into a SystemVerilog control/status register (CSR) block"
readme = "README.md"
license = {text = "GPLv3"}
keywords = [
    "SystemRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
    "Verilog", "SystemVerilog", "register abstraction layer",
    "FPGA", "ASIC",
]
classifiers = [
    #"Development Status :: 5 - Production/Stable",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.optional-dependencies]
cli = [
    "peakrdl-cli >= 1.2.3",
]


[project.urls]
Source = "https://github.com/daxzio/PeakRDL-etana"
Tracker = "https://github.com/daxzio/PeakRDL-etana/issues"
Changelog = "https://github.com/daxzio/PeakRDL-etana/releases"
Documentation = "https://peakrdl-etana.readthedocs.io/"

[tool.setuptools.dynamic]
version = {attr = "peakrdl_etana.__about__.__version__"}

[project.entry-points."peakrdl.exporters"]
etana = "peakrdl_etana.__peakrdl__:Exporter"

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
strict_equality = true

# Allow flexibility for compatibility
allow_redefinition = true
allow_untyped_globals = true
allow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    "systemrdl.*",
    "jinja2.*",
]
ignore_missing_imports = true
